fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@
   background-image: url('./images/star.svg');
   background-size: contain; /* Ensure proper scaling */
   background-repeat: no-repeat;
-  margin: 4px; /* Adjust spacing */
+  margin-right: 4px;
 }
 
 /* Active stars */
